WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
203778
[LFC][IFC] Runs collapsed to zero advanced width are not always whitespace collapsed
https://bugs.webkit.org/show_bug.cgi?id=203778
Summary
[LFC][IFC] Runs collapsed to zero advanced width are not always whitespace co...
alan
Reported
2019-11-02 05:51:57 PDT
Should find a better name for Run::isCollapsedToZeroAdvanceWidth() since it can easily be confused with whitespace collapsing
Attachments
Patch
(3.00 KB, patch)
2019-11-02 06:02 PDT
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2019-11-02 05:52:09 PDT
<
rdar://problem/56839642
>
alan
Comment 2
2019-11-02 06:02:15 PDT
Created
attachment 382674
[details]
Patch
WebKit Commit Bot
Comment 3
2019-11-03 07:10:35 PST
Comment on
attachment 382674
[details]
Patch Clearing flags on attachment: 382674 Committed
r251973
: <
https://trac.webkit.org/changeset/251973
>
WebKit Commit Bot
Comment 4
2019-11-03 07:10:36 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug